<resources>
    <string name="app_name">털뭉치들</string>

    <!-- Login UI -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="find_password">비밀번호를 잊으셨나요?  비밀빈호 찾기</string>
    <string name="consider">가입형식</string>
    <string name="id_format">- 아이디: 이메일 형식(예: abcde@naver.com)</string>
    <string name="password_format">- 비밀번호: 특수문자, 소문자, 대문자를 포함한 6자 이상의 길이</string>
    <string name="find_password_format">- 비밀번호 분실시 가입하신 이메일로 되찾을 수 있습니다.</string>
    <string name="move_register">계정이 없으신가요?  회원가입 바로가기</string>
    <string name="login_fail">로그인에 실패했습니다\n이메일 혹은 비밀번호를 확인해주세요</string>

    <!-- FindPassword UI -->
    <string name="request_email">email 발송요청</string>
    <string name="request_success">요청 성공</string>
    <string name="loading">로딩중</string>
    <string name="find_password_title">비밀번호 찾기</string>
    <string name="find_password_announcement1">이메일 형식을 확인해주세요.</string>
    <string name="find_password_announcement2">이메일을 확인해주세요.</string>


    <!-- Register UI -->
    <string name="nickname">닉네임</string>
    <string name="register">가입하기</string>
    <string name="nickname_format">- 닉네임은 10자 이내로 입력해주세요.</string>
    <string name="move_login">이미 계정이 있으신가요? 로그인하기</string>
    <string name="register_error">이메일 및 비밀번호 형식을 확인해주세요.</string>
    <string name="register_fail">오류가 발생했습니다. 종료 후 다시 시도해주세요.</string>
    <string name="email_overlap">중복된 이메일이 존재합니다.</string>

    <!-- SmoothBottomBar Menu -->
    <string name="menu_home">홈</string>
    <string name="menu_search">검색</string>
    <string name="menu_noti">알림</string>
    <string name="menu_chatting">채팅</string>
    <string name="menu_timeline">타임라인</string>

    <!-- TimeLineFragment -->
    <string name="timeline_title">타임라인</string>
    <string name="timeLine_menu1">피드  %d</string>
    <string name="timeLine_menu2">팔로워  %d</string>
    <string name="timeLine_menu3">팔로잉  %d </string>
    <string name="timeLine_menu4">북마크</string>
    <string name="timeLine_menu5">내가 쓴 글</string>
    <string name="timeLine_menu6">메세지</string>
    <string name="info_modify">닉네임 수정</string>
    <string name="info_complete">완료</string>

    <!-- menu dialog -->
    <string name="menu_title">글 작성</string>
    <string name="menu_setting">설정</string>
    <string name="show_animal">반려동물 자랑하기</string>
    <string name="question_animal">반려동물 질문하기\n(다음 버전에서 업데이트 될 예정입니다)</string>
    <string name="follow">팔로우</string>
    <string name="unfollow">언팔로우</string>
    <string name="follower">팔로워</string>
    <string name="following">팔로잉</string>

    <!-- MakeFeedActivity -->
    <string name="file_provider" translatable="false">studio.seno.singlelife.fileprovider</string>
    <plurals name="pick_multi">
        <item quantity="one">One image selected</item>
        <item quantity="other">%1$d images selected</item>
    </plurals>
    <plurals name="pick_multi_more">
        <item quantity="one">Please select one more image…</item>
        <item quantity="other">한 개 이상의 이미지를 선택해주세요</item>
    </plurals>
    <string name="pick_single">이미지를 선택해주세요</string>
    <string name="pick_multi_limit">이미지는 10개까지 선택 가능합니다</string>
    <string name="ShowAnimal_announce1">드래그하여 순서를 변경할 수 있습니다.</string>
    <string name="ShowAnimal_announce2">해시태그를 통해서 검색에 노출됩니다.</string>
    <string name="ShowAnimal_title">반려동물 자랑하기</string>
    <string name="check_box1">강아지</string>
    <string name="check_box2">고양이</string>
    <string name="check_box3">기타</string>
    <string name="ShowAnimal_menu1">이미지 등록</string>
    <string name="ShowAnimal_menu2">반려동물 종류</string>
    <string name="ShowAnimal_menu3">해시태그 등록</string>
    <string name="ShowAnimal_menu4">내용 등록</string>
    <string name="ShowAnimal_hint1">예)#막내냥이</string>
    <string name="ShowAnimal_hint2">내용을 입력해주세요.</string>
    <string name="ShowAnimal_toast1">해시태그는 5개를 초과할 수 없습니다.</string>
    <string name="ShowAnimal_toast2">이미지는 10개를 초과할 수 없습니다.</string>
    <string name="ShowAnimal_toast3">반려동물의 종류를 선택해주세요.</string>
    <string name="ShowAnimal_toast4">기타 항목에 반료동물의 종류를 입력해주세요.</string>
    <string name="ShowAnimal_toast5">이미지를 최소 1개 첨부해주세요.</string>
    <string name="upload_fail">업로드를 실패했습니다. 다시 시도해주세요.</string>


    <!--feed_item.xml-->
    <string name="comment_hint">댓글 입력하기</string>
    <string name="comment_hint2">댓글 추가하기...</string>
    <string name="more">....더보기</string>

    <!-- CommentActivity -->
    <string name="header_title">댓글</string>
    <string name="comment_write_answer">답글 달기</string>
    <string name="comment_read_answer">----------답글 보기</string>
    <string name="comment_fold_answer">답글 접기</string>
    <string name="comment_modify_ing">댓글 수정 중...</string>
    <string name="answer_write_hint">답글 달기</string>
    <string name="answer_write_ing">답글 작성 중...</string>
    <string name="answer_modify_ing">답글 수정 중...</string>

    <!-- SearchActivity -->
    <string name="last_search">최근 검색어</string>
    <string name="search_result">에 대한 검색 결과</string>
    <string name="no_result">에 관한 검색결과가 없습니다</string>

    <!-- NotificationFragment-->
    <string name="notification_title">알림</string>
    <string name="notification_no_contents">알림 내역이 비어 있습니다.</string>

    <!-- HomeFragment -->
    <string name="feed_title">피드</string>

    <!-- ChatFragment -->
    <string name="chatDialog_title">채팅방 나가기</string>
    <string name="chat_no_contents">채팅 내역이 비어 있습니다.</string>
    <string name="chatDialog_message">채팅방을 나가시겠습니까?</string>
    <string name="chat_yes">예</string>
    <string name="chat_no">아니오</string>
    <string name="chat_remove_content">%s님이 채팅방을 나갔습니다.</string>

    <!-- ChatActivity -->
    <string name="chat_title1">채팅방</string>
    <string name="chat_title2">메세지</string>

    <!-- ErrorActivity -->
    <string name="no_exist_feed">해당 피드는 삭제되었습니다.</string>
    <string name="report1">스팸/광고 게시물입니다.</string>
    <string name="report2">욕설/폭언이 포함된 게시물입니다.</string>
    <string name="report3">부적절한 게시물입니다(불법, 음란, 재산권침해 등)</string>

    <!-- ShowFeedActivity -->
    <string name="showFeed_title1">내 글</string>
    <string name="showFeed_title2">북마크</string>

    <!-- noticiation module -->
    <string name="noti_title">님이 댓글을 남기셨습니다.</string>
    <string name="chat_title">님으로부터 메세지가 도착했습니다.</string>
    <string name="noti_name1">댓글알림</string>
    <string name="noti_name2">채팅알림</string>

    <!--Binding Adapter-->
    <string name="binding_heart">좋아요 </string>
    <string name="binding_comment">댓글</string>

    <string name="follow_each_other">맞팔하기</string>
    <string name="follow_ing">팔로우 중</string>


    <!-- common -->
    <string name="submit">확인</string>
    <string name="modify">수정하기</string>
    <string name="delete">삭제하기</string>
    <string name="report">신고하기</string>


    <!-- Unit -->
    <string name="unit1">개</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Toast -->
    <string name="toast1">한 번 더 터치하면 종료됩니다.</string>
    <string name="follow_toast">팔로우 되었습니다.</string>
    <string name="unfollow_toast">언팔로우 되었습니다.</string>
    <string name="report_toast">신고가 접수됐습니다.</string>

    <!--FilterDialog-->
    <string name="filter_title">검색 범위 설정</string>
    <string name="filter_message">필터를 통해서 원하는 피드를 찾아볼 수 있습니다.</string>

    <!-- 카카오 디벨로퍼 앱 만들기에서 네이티브 키를 입력해주시면 됩니다. -->
    <string name="kakao_app_key">fba4427cc0597b551edf661393a5bc9d</string>
    <string name="kakao_scheme">kakaofba4427cc0597b551edf661393a5bc9d</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="kakao_title">반려동물 자랑</string>
    <string name="kakao_description">귀여운 반려동물 사진 공유해요</string>
    <string name="kakao_description2">앱에서 보기</string>
</resources>