<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.feed.MakeFeedActivity">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/header"
                    layout="@layout/header_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/grey">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/ShowAnimal_menu1"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/camera_btn"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            app:srcCompat="@drawable/photo" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/imageRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/ShowAnimal_announce1"
                        android:textSize="10sp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/ShowAnimal_menu2"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp">


                        <RadioButton
                            android:id="@+id/dog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/check_box1" />

                        <RadioButton
                            android:id="@+id/cat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/check_box2" />

                        <RadioButton
                            android:id="@+id/etc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/check_box3" />
                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />


                        <EditText
                            android:id="@+id/etc_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:gravity="bottom"
                            android:maxLength="20"
                            android:textSize="14sp" />
                    </LinearLayout>


                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/ShowAnimal_menu3"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/hashTag_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:background="@null"
                        android:hint="@string/ShowAnimal_hint1"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/hashTag_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:src="@drawable/add" />
                </LinearLayout>

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:scrollbars="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ScrollView
                        android:id="@+id/scrollView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/hashTagContainer"
                            android:layout_width="match_parent"
                            android:layout_height="15dp"
                            android:orientation="horizontal"
                            android:visibility="visible">


                        </LinearLayout>
                    </ScrollView>
                </HorizontalScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:text="@string/ShowAnimal_announce2"
                    android:textSize="10sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/ShowAnimal_menu4"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/ShowAnimal_hint2"
                    android:inputType="textMultiLine"
                    android:padding="5dp"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/submit"
                    android:textColor="@color/white" />


            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
